--- a/src/index.css
+++ b/src/index.css
@@ -1,38 +1,42 @@
-* {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-}
+} */
 
-body {
+/* body {
     background-color: #0f0f0f;
     color: white;
-}
+} */
 
-#main-layout {
+/* #main-layout {
     width: 100%;
     /* min-height: 100vh; */
-    min-height: 100dvh; /* se utiliza para mobile */
+    /* min-height: 100dvh; se utiliza para mobile
     display: grid;
-    grid-template-columns: 20% 1fr; /*auto es parecido a 1fr */
-    grid-template-rows: 3.2rem 1fr ;
+    grid-template-columns: 20% 1fr; auto es parecido a 1fr */
+    /* grid-template-rows: 3.2rem 1fr ;
     padding: 1rem;
-}
+} */ */
 
-#navbar {
-    grid-column: 1 / 3; /*1 donde empieza y 3 donde termina es por el numero de rayas */
+/* #navbar {
+    grid-column: 1 / 3; 1 donde empieza y 3 donde termina es por el numero de rayas
 
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-}
+} */
 
-#logo {
+/* #logo {
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: 0.3rem;
     padding-left: 1rem ;
-}
+} */
 
 #search-container {
     display: flex;
@@ -130,5 +134,9 @@ body {
 
 .video-card-title, .video-card-channel {
     grid-column: 2 / 3;
+}
+
+.special {
+    border: 1px solid red;
 }
 
