--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@
     grid-template-columns: 20% 1fr; auto es parecido a 1fr */
     /* grid-template-rows: 3.2rem 1fr ;
     padding: 1rem;
-} */ */
+} */ 
 
 /* #navbar {
     grid-column: 1 / 3; 1 donde empieza y 3 donde termina es por el numero de rayas
@@ -38,38 +38,38 @@
     padding-left: 1rem ;
 } */
 
-#search-container {
+/* #search-container {
     display: flex;
     justify-content: center;
     align-items: center;
-}
+} */
 
-#search-container input {
+/* #search-container input {
     width: 100%;
     padding: 0.5rem 1rem;
     border: 1 px solid #282828;
     border-radius: 1rem;
     background-color: transparent;
-}
+} */
 
-#user-icon {
+/* #user-icon {
     display: flex;
     justify-content: flex-end;
-}
+} */
 
-#user-icon img {
+/* #user-icon img {
     width: 2rem;
     height: 2rem;
     border-radius: 50%;
-}
+} */
 
-#menu {
+/* #menu {
     grid-column: 1 / 2;
     grid-row: 2 / 3;
     padding: 0 1rem 0 0;
-}
+} */
 
-#menu .menu-item {
+/* #menu .menu-item {
     padding: 1rem;
     border-radius: 20px;
     display: flex;
@@ -80,63 +80,62 @@
 
 #menu .menu-item:hover {
     background-color: #282828;
-}
+} */
 
-#content {
+/* #content {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
-}
+} */
 
-#categories-list {
+/* #categories-list {
     display: flex;
     flex-direction: row;
     gap: 1rem;
-}
+} */
 
-#categories-list .category {
+/* #categories-list .category {
     padding: 0.5rem 1rem;
     border-radius: 20px;
     background-color: #282828;
-}
+} */
 
-#videos {
+/* #videos {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 1rem;
     padding-top: 1rem;
-}
+} */
 
-.video-card {
+/* .video-card {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
-}
+} */
 
-.video-card img {
+/* .video-card img { 
     width: 100%;
     border-radius: 10px;
-    object-fit: cover;
-    aspect-ratio: 16/9;
-}
+    object-fit: cover; 
+    aspect-ratio: 16/9; 
+} */
 
-.video-card footer {
+/* .video-card footer {
     display: grid;
     gap: 0.5rem;
     grid-template-columns: 2rem 1fr;
-}
+} */
 
-.video-card footer img {
+/* .video-card footer img {
     grid-column: 1 / 2;
     width: 2rem;
     height: 2rem;
     border-radius: 50%;
-}
+} */
 
-.video-card-title, .video-card-channel {
+/* .video-card-title, .video-card-channel {
     grid-column: 2 / 3;
-}
+} */
 
-.special {
+/* .special {
     border: 1px solid red;
-}
-
+} */
